--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 body {
   height: 2000px;
   background-color: #e8eddf;
@@ -91,8 +96,11 @@ body {
   text-transform: uppercase;
   font-weight: 500;
   width: 100%;
-  border-radius: 3px;
+  border-radius: 10px;
   display: block;
   transition: 3s;
-  padding: 25px 20px;
+  padding: 5px 15px;
+}
+.my-btn {
+  margin-right: 20px;
 }
