--- a/style/style.css
+++ b/style/style.css
@@ -104,3 +104,95 @@ body {
 .my-btn {
   margin-right: 20px;
 }
+.wrapper {
+  padding: 30px 0;
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  gap: 20px;
+}
+.card {
+  height: 333px;
+  width: 250px;
+  padding: 12px;
+  position: relative;
+  background: linear-gradient(#f5cb5c 50%, #1e202b 50%) 0 100% no-repeat;
+  background-size: 100% 200%;
+  transition: 0.7s;
+  overflow: hidden;
+}
+.img-wrapper {
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+.card img {
+  width: 100%;
+  height: 100%;
+}
+.card:hover {
+  background-position: 0 0;
+}
+.details {
+  position: absolute;
+  background-color: #ffffff;
+  color: #000000;
+  width: 80%;
+  text-align: center;
+  padding: 10px 0;
+  bottom: -100px;
+  margin: auto;
+  left: 0;
+  right: 0;
+  transition: 0.7s;
+}
+h3,
+h5 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+}
+h3 {
+  letter-spacing: 1px;
+  font-size: 14px;
+}
+h5 {
+  font-size: 12px;
+}
+.about-me {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  margin: 10px 0 5px 0;
+}
+.card:hover .details {
+  bottom: 30px;
+}
+.img-wrapper:after {
+  position: absolute;
+  content: "";
+  height: 100%;
+  width: 100%;
+  background-color: #000000;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: 0.7s;
+}
+.card:hover .img-wrapper:after {
+  opacity: 0.5;
+}
+i:hover {
+  color: #529fe9;
+  cursor: pointer;
+}
+@media screen and (min-width: 992px) {
+  .wrapper {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+  }
+  .card {
+    height: 400px;
+    width: 300px;
+    padding: 15px;
+  }
+}
