--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -58,7 +59,6 @@ body {
 /* --------------------------------------------------
 HEADER STYLING ENDS HERE */
 
-
 /* NAVBAR STYLING STARTS HERE
 -------------------------------------------------- */
 
@@ -89,7 +89,7 @@ HEADER STYLING ENDS HERE */
   display: block;
 }
 
-.navbar-light .navbar-nav .active>.nav-link {
+.navbar-light .navbar-nav .active > .nav-link {
   color: #f5cb5c;
   margin-left: 30px;
 }
@@ -158,7 +158,6 @@ HEADER STYLING ENDS HERE */
 
 /* --------------------------------------------------
 NAVBAR STYLING ENDS HERE */
-
 
 /* TRAINER CARDS STYLING STARTS HERE
 -------------------------------------------------- */
@@ -274,7 +273,6 @@ i:hover {
 /* --------------------------------------------------
 TRAINER CARDS STYLING ENDS HERE */
 
-
 /* REVIEW CAROUSEL STYLING STARTS HERE
 -------------------------------------------------- */
 
@@ -320,4 +318,183 @@ TRAINER CARDS STYLING ENDS HERE */
 }
 
 /* REVIEW CAROUSEL STYLING ENDS HERE
+-------------------------------------------------- */
+/* FOOTER STYLING STARTS HERE
+-------------------------------------------------- */
+.first {
+  margin-top: 40px;
+  margin-bottom: 50px;
+  color: #333533;
+  font-family: "Poppins", sans-serif;
+}
+
+.first h4 {
+  font-size: 20px;
+  letter-spacing: 3px;
+  position: relative;
+  margin-bottom: 20px;
+  font-size: 1.6em;
+  color: #242423;
+  padding-bottom: 0.5em;
+}
+
+.first h4::after {
+  content: "";
+  background: #f5cb5c;
+  width: 20%;
+  height: 2px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.first p {
+  font-size: 14px;
+}
+
+.second {
+  margin-top: 40px;
+  margin-bottom: 50px;
+  color: #333533;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+}
+
+.second2 {
+  margin-top: 40px;
+  margin-bottom: 50px;
+  color: #242423;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+}
+
+.second h4 {
+  font-size: 20px;
+  letter-spacing: 3px;
+  position: relative;
+  margin-bottom: 20px;
+  font-size: 1.6em;
+  color: #242423;
+  padding-bottom: 0.5em;
+}
+
+.second h4::after {
+  content: "";
+  background: #f5cb5c;
+  width: 20%;
+  height: 2px;
+  position: absolute;
+  bottom: 0;
+  left: 40%;
+}
+
+.second li {
+  list-style: none;
+  padding-bottom: 30px;
+}
+
+.second a,
+.second2 a {
+  color: #242423;
+  text-decoration: none;
+  letter-spacing: 3px;
+  font-weight: bold;
+  font-size: 14px;
+  transition: 0.2s;
+  margin-right: 2em;
+}
+
+.second a:hover,
+.second2 a:hover {
+  color: #fff;
+  transition: 0.2s;
+  text-shadow: 1px 1px 20px rgba(0, 0, 0, 1);
+  text-decoration: none;
+}
+
+.third {
+  margin-top: 40px;
+  margin-bottom: 50px;
+  color: #333533;
+  font-family: "Poppins", sans-serif;
+  text-align: right;
+}
+
+.third h4 {
+  font-size: 20px;
+  letter-spacing: 3px;
+  position: relative;
+  margin-bottom: 20px;
+  font-size: 1.6em;
+  color: #242423;
+  padding-bottom: 0.5em;
+}
+
+.third h4::after {
+  content: "";
+  background: #f5cb5c;
+  width: 20%;
+  height: 2px;
+  position: absolute;
+  bottom: 0;
+  left: 80%;
+}
+
+.third li {
+  list-style: none;
+  padding-bottom: 15px;
+}
+
+.third a {
+  color: #242423;
+  text-decoration: none;
+  letter-spacing: 3px;
+  font-weight: bold;
+  font-size: 14px;
+  transition: 0.2s;
+}
+
+.third a:hover {
+  color: #fff;
+  transition: 0.2s;
+  text-shadow: 1px 1px 20px rgba(0, 0, 0, 1);
+}
+
+@media screen and (max-width: 1000px) {
+  .first {
+    text-align: center;
+  }
+
+  .first h4::after {
+    left: 40%;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .third {
+    text-align: center;
+  }
+
+  .third h4::after {
+    left: 40% !important;
+  }
+}
+
+.margin {
+  margin-left: 20px;
+}
+
+.line {
+  height: 2px;
+  background-color: #f5cb5c;
+  width: 100%;
+}
+
+.container h1 {
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+/* FOOTER STYLING ENDS HERE
 -------------------------------------------------- */
