commented out left margin for email header - it was only working in the profile page

--- a/style/style.css
+++ b/style/style.css
@@ -53,9 +53,9 @@ body {
   text-decoration: none;
 }
 
-.headcont:last-of-type {
+/* .headcont:last-of-type {
   margin-left: 60px;
-}
+} */
 
 .headCont img {
   position: absolute;
