--- a/style/style.css
+++ b/style/style.css
@@ -811,3 +811,67 @@ TRAINER CARDS STYLING ENDS HERE */
 #back img {
   padding: 20px;
 }
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 1rem;
+  grid-auto-rows: 300px;
+  grid-auto-flow: dense;
+  list-style-type: none;
+  padding: 5px;
+  margin: 0 0 20px 0;
+}
+
+.title-gallery {
+  padding: 50px;
+  font-size: 50px;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.gallery li {
+  /*   overflow: hidden; */
+}
+
+.gallery li figure {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.wide {
+  grid-column: span 2;
+}
+
+.tall {
+  grid-row: span 2;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  object-fit: cover;
+}
+.gallery.filter img {
+  transition: filter 0.3s ease-in-out;
+  filter: grayscale(100%);
+}
+
+.gallery.filter img:hover {
+  filter: none;
+}
+
+.gallery.zoom li {
+  overflow: hidden;
+}
+
+.gallery.zoom img {
+  transform: scale(1);
+  transition: transform 0.3s ease-in-out;
+}
+
+.gallery.zoom img:hover {
+  transform: scale(1.2);
+}
