--- a/style/style.css
+++ b/style/style.css
@@ -848,7 +848,7 @@ TRAINER CARDS STYLING ENDS HERE */
   grid-row: span 2;
 }
 
-img {
+.gallery img {
   width: 100%;
   height: 100%;
   display: block;
