added logo shrink in very small resolutions

--- a/style/style.css
+++ b/style/style.css
@@ -63,6 +63,10 @@ body {
   top: 5px;
 }
 
+.logo {
+  width: 100%;
+}
+
 /* --------------------------------------------------
 HEADER STYLING ENDS HERE */
 
