--- a/style/style.css
+++ b/style/style.css
@@ -717,6 +717,14 @@ TRAINER CARDS STYLING ENDS HERE */
   transition: all 0.2s;
 }
 
+.main-courses {
+  grid-template-rows: 20px 50px 80px 1fr;
+}
+
+.profile-courses {
+  grid-template-rows: 20px 50px 80px 1fr 50px;
+}
+
 .card-course:hover {
   box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
   transform: scale(1.01);
